// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hasGradient: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="top"], slot[name="bottom"] {
  display: grid;
  grid-template-columns: subgrid;
}
slot[name="top"] {
  grid-area: 1/1/2/-1;
  background: var(--p-topbar-top-background, #212225);
}
slot[name="bottom"] {
  grid-area: 3/1/4/-1;
}
slot[name="start"], slot[name="end"] {
  display: flex;
  gap: 8px 16px;
  flex-flow: wrap;
  align-items: center;
}
slot[name="start"] {
  grid-area: 2/2;
  justify-content: start;
}
slot[name="end"] {
  grid-area: 2/4;
  justify-content: end;
}
header {
  --_p-a: calc(max(22px, 10.625vw - 12px) - 16px);
  position: relative;
  z-index: 0;
  display: grid;
  grid-template: auto minmax(48px,auto) auto / var(--_p-a) minmax(0,1fr) auto minmax(0,1fr) var(--_p-a);
  gap: 16px;
  align-items: center;
}
@media(min-width:760px) {
  header {
    --_p-a: calc(calc(5vw - 16px) - 16px);
  }
}

@media(min-width:1920px) {
  header {
    --_p-a: calc(calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px)) - 16px);
  }
}

.crest {
  grid-area: 2/3;
}
.wordmark {
  grid-area: 2/3;
}
@media(min-width:760px) {
  .crest {
    display: none;
  }
}

@media(max-width:759px) {
  .wordmark {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasGradient: true 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="top"], slot[name="bottom"] {
  display: grid;
  grid-template-columns: subgrid;
}
slot[name="top"] {
  grid-area: 1/1/2/-1;
  background: var(--p-topbar-top-background, #212225);
}
slot[name="bottom"] {
  grid-area: 3/1/4/-1;
}
slot[name="start"], slot[name="end"] {
  display: flex;
  gap: 8px 16px;
  flex-flow: wrap;
  align-items: center;
}
slot[name="start"] {
  grid-area: 2/2;
  justify-content: start;
}
slot[name="end"] {
  grid-area: 2/4;
  justify-content: end;
}
header {
  --_p-a: calc(max(22px, 10.625vw - 12px) - 16px);
  position: relative;
  z-index: 0;
  display: grid;
  grid-template: auto minmax(48px,auto) auto / var(--_p-a) minmax(0,1fr) auto minmax(0,1fr) var(--_p-a);
  gap: 16px;
  align-items: center;
}
header::before {
  content: "";
  grid-area: 2/1/-1/-1;
  align-self: stretch;
  margin-block: -16px calc(-60px - 16px);
  z-index: -1;
  pointer-events: none;
  background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);
}
@media(min-width:760px) {
  header {
    --_p-a: calc(calc(5vw - 16px) - 16px);
  }
}

@media(min-width:1920px) {
  header {
    --_p-a: calc(calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px)) - 16px);
  }
}

.crest {
  grid-area: 2/3;
}
.wordmark {
  grid-area: 2/3;
}
@media(min-width:760px) {
  .crest {
    display: none;
  }
}

@media(max-width:759px) {
  .wordmark {
    display: none;
  }
}
"
`;
